# algorithm-engineering-material-ss2026

./: README.md
.github/workflows/: deploy-slides.yml
homework/HW01/exercise01/: CMakeLists.txt  Dockerfile  README.md
homework/HW01/exercise01/src/: output_id.cpp
homework/HW01/exercise02/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_er.py  graph1.json  graph2.json  graph3.json  graph4.json  graph5.json  graph6.json  graph7.json  graph8.json  problem_program_a.cpp  problem_program_b.cpp
homework/HW01/exercise03/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.py  pyproject.toml
homework/HW01/exercise03/src/tsp_two_opt/: __init__.py  _core.cpp  best_improvement.py  first_improvement.py  full_scan.py
homework/HW01/exercise03/tests/: test_two_opt.py
slides/: index.html
slides/L01/: L01-overview.qmd  references.bib  styles.css
slides/L01/assets/: gen_abstract_trees.py  gen_algorithm_wall.py  gen_binpacking.py  gen_decomposition.py  gen_exponential_plot.py  gen_lns_animation.py  gen_matmul.py  gen_tsp_relaxation.py  knapsack_tree_analysis.py  knapsack_tree_feas_only.dot  knapsack_tree_feas_opt.dot  knapsack_tree_feas_opt_known.dot  knapsack_tree_no_pruning.dot  knapsack_tree_order_best.dot  knapsack_tree_order_worst.dot  knapsack_tree_viz.py  tree_bounded.dot  tree_full.dot  tree_propagated.dot  tree_pruned.dot
