cmake_minimum_required(VERSION 3.20..4.2)
project(ae26_sheet1_ex2 CXX)
add_executable(problem_program_a problem_program_a.cpp)
target_compile_features(problem_program_a PRIVATE cxx_std_20)
add_executable(problem_program_b problem_program_b.cpp)
target_compile_features(problem_program_b PRIVATE cxx_std_20)
target_include_directories(problem_program_b PRIVATE "${CMAKE_CURRENT_LIST_DIR}/include")
